# fastapi-flight

./: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 28dd384502af_debit_card_model.py  6314676aa0b6_country_model_added.py  6f5e74238f3b_adding_user_model.py  727fecc6b7c3_destination_model_added.py  87e3722207df_generate_all_models.py  aa7da54c042f_booking_id_added_to_booking_model_gen.py  bd43a48df777_booking_id_added_to_booking_model.py  c017a2514447_regenerate_hotelmedia.py  cc4abee59c7c_generate_all_models.py  dbf372131aae_unique_columns_added_to_hotelrating.py  e1f0fe17d70d_hotel_model.py
app/: initial_data.py  main.py
app/api/: deps.py
app/api/v1/: api.py  celery_tasks.py
app/api/v1/endpoints/: amenity.py  available_room.py  debit_card.py  freebie.py  hotel.py  hotel_booking.py  hotel_rating.py  login.py  user.py  user_site.py
app/core/: celery.py  config.py  security.py
app/crud/: __init__.py  amenity.py  available_room.py  base.py  debit_card.py  freebie.py  hotel.py  hotel_booking.py  hotel_rating.py  media.py  user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  base.py  debit_card.py  hotel.py  media.py  user.py
app/schemas/: amenity_schema.py  available_room_schema.py  common_schema.py  debit_schema.py  freebie_schema.py  hotel_booking_schema.py  hotel_rating_schema.py  hotel_schema.py  media_schema.py  token_schema.py  user.py
app/utils/: code_generate.py  exceptions.py  minio_client.py  modify_media.py  token.py
