[tool.poetry]
name = "fastapi-flight"
version = "0.1.0"
description = ""
authors = ["sayfullayevabdulaziz <abdulaziz13122002@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_flight"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.0.3"}
pydantic-extra-types = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
redis = "^4.6.0"
pydantic-partial = "^0.5.1"
python-multipart = "^0.0.6"
celery = "^5.3.1"
flower = "^2.0.0"
minio = "^7.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
